<resources>
    <string name="app_name">BSI</string>
    <string name="login">Login</string>
    <string name="bca_id">BCA ID\n(User ID)</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa BCA ID (User ID)</string>
    <string name="reset_password">Reset Password</string>
    <string name="info_register">Tekan tombol Register bila kamu belum memiliki BCA ID (User ID)</string>
    <string name="register">Register</string>
    <string name="see_product">Lihat Produk</string>
    <string name="portfolio">Portfolio</string>
    <string name="profile">Profile</string>
    <string name="products">Products</string>
    <string name="information">Information</string>
    <string name="more">More</string>
    <string name="product">Produk</string>
    <string name="pasar_perdana">Pasar Perdana</string>
    <string name="pasar_sekunder">Pasar Sekunder</string>
    <string name="all_product">Semua Produk</string>
    <string name="invest_manager">Manajer Investasi</string>
    <string name="transaction_status">Status Transaksi</string>
    <string name="search">Pencarian</string>
    <string name="notice">Pemberitahuan</string>
    <string name="buy">Beli</string>
    <string name="sell">Jual</string>
    <string name="selling">Penjualan</string>
    <string name="performance_1_month">Kinerja 1 Bln</string>
    <string name="nab_unit">NAB/Unit</string>
    <string name="product_not_found">Produk tidak ditemukan</string>
    <string name="rekening_sumber_dana">Rekening Sumber Dana</string>
    <string name="rekening_tujuan">Rekening Tujuan</string>
    <string name="nominal_pembelian">Nominal Pembelian</string>
    <string name="jumlah_unit_penjualan">Jumlah Unit Penjualan</string>
    <string name="nominal_biaya_pembelian">Nominal Biaya Pembelian</string>
    <string name="nominal_biaya_penjualan">Nominal Biaya Penjualan</string>
    <string name="nominal_total_pembelian">Nominal Total Pembelian</string>
    <string name="berkala">Berkala?</string>
    <string name="sell_all">Jual Semua?</string>
    <string name="rp">Rp</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="additional_information">Informasi Tambahan</string>
    <string name="prospectus">Prospectus</string>
    <string name="fund_fact_sheet">Fund Fact Sheet</string>
    <string name="toc">Ketentuan Pembelian</string>
    <string name="next">Lanjut</string>
    <string name="purchasing">Pembelian</string>
    <string name="transaction_type">Tipe Transaksi</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="purchase">Bayar</string>
    <string name="info_purchase">Untuk melanjutkan transaksi, mohon agar terlebih dahulu membaca bagian Pernyataan.</string>
    <string name="finish">Selesai</string>
    <string name="product_name">Nama Produk</string>
    <string name="transaction_time">Waktu Transaksi</string>
    <string name="referensi_number">No. Referensi</string>
    <string name="product_detail">Detail Produk</string>
    <string name="info_detail_transaction">Konfirmasi atas investasi pada Efek Reksa Dana yang diterbitkan oleh Bank Kustodian adalah bukti kepemilikan yang sah.</string>
    <string name="info_detail_transaction1">Setiap detail transaksi otomatis tersimpan di Inbox kamu.</string>
    <string name="bca_id_password_empty">BCA ID atau password kosong</string>
    <string name="internet_down">Pastikan koneksi internet stabil</string>
    <string name="close">Tutup</string>
    <string name="view_more">Lihat Selengkapnya</string>
    <string name="my_transaction">Transaksiku</string>
    <string name="copy_transaction">Salin Transaksi</string>
    <string name="hint_share_something">Share something insightful...</string>
    <string name="post">Post</string>
    <string name="kinerja_produk">Kinerja Produk (%)</string>
    <string name="product_information">Informasi Produk</string>
    <string name="comment">Comment</string>
    <string name="report">Report</string>
    <string name="report_now">Laporkan</string>
    <string name="reason_to_report">Alasan Pelaporan</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="write_something">Write something...</string>
    <string name="my_unit">Jumlah Unit Dimiliki</string>
    <string name="info_sell">Mohon sisakan sedikitnya 100 unit atau jual semua</string>
    <string name="total">Total</string>
    <string name="delete_post">Semua komentar dan likes di postingan ini akan ikut hilang.</string>
    <string name="delete_confirmation_post">Konfirmasi Hapus</string>
    <string name="calculator_besar_invest_bulanan_desc">Cari tahu berapa yang harus kamu sisihkan perbulan untuk mencapai target hasil investasimu sesuai durasi yang kamu mau</string>
    <string name="calculator_besar_hasil_investasi_desc">Cari tahu besarnya hasil investasimu dalam durasi yang telah kamu tentukan</string>
    <string name="calculator_durasi_investasi_desc">Cari tahu durasi yang dibutuhkan untuk mencapai target investasi kamu</string>
    <string name="calculator_besar_ror_desc">Cari tahu besar Rate of Return pertahun, sesuai dengan rencana investasi mu</string>
    <string name="calculator_target_hasil_investasi_label">TARGET HASIL INVESTASI</string>
    <string name="calculator_modal_awal_label">MODAL AWAL</string>
    <string name="calculator_rate_of_return_label">RATE OF RETURN (ROR)</string>
    <string name="symbol_bintang">*</string>
    <string name="ket_pertahun">pertahun</string>
    <string name="symbol_persen">%</string>
    <string name="calculator_durasi_investasi_label">DURASI INVESTASI</string>
    <string name="calculator_investasi_bulanan_label">INVESTASI BULANAN</string>
    <string name="calculator_besar_hasil_investasi_label">BESAR HASIL INVESTASI</string>
    <string name="calculator_besar_setoran_investasi_bulanan">BESAR SETORAN INVESTASI BULANAN</string>
    <string name="calculator_kalkulasi_label">KALKULASI</string>
    <string name="calculator_reset_label">RESET</string>
    <string name="kalkulator_investasi">Kalkulator Investasi</string>
    <string name="besar_hasil_investasi">Besar Hasil\nInvestasi</string>
    <string name="besar_investasi_bulanan">Besar Investasi\nBulanan</string>
    <string name="durasi_investasi">Durasi\nInvestasi</string>
    <string name="besar_ror">Besar RoR</string>
    <string name="calculator_disclaimer">Disclaimer:\nPerhitungan yang dihasilkan oleh kalkulator merupakan simulasi dan bersifat estimasi. Nilai sesungguhya dapat berbeda.</string>
    <string name="durasi_tidak_boleh_kosong_dan_ror_tidak_boleh_bernilai_nol">Durasi tidak boleh kosong dan RoR tidak boleh bernilai nol</string>
    <string name="ror_tidak_boleh_bernilai_nol">RoR tidak boleh bernilai nol</string>
    <string name="durasi_tidak_boleh_kosong">Durasi tidak boleh kosong</string>
    <string name="produk_reksadana_capslock">PRODUK REKSA DANA : </string>
    <string name="pilih_produk_reksadana_capslock">PILIH PRODUK REKSA DANA : </string>
    <string name="kinerja_satu_bln">Kinerja 1 Bln</string>
    <string name="nab_per_unit">nab/unit</string>
    <string name="input_tidak_sesuai">Data yang diinput tidak sesuai</string>
    <string name="ror_bernilai_negatif">RoR bernilai negatif</string>
    <string name="ror_bernilai_lebih_dari_50_persen">RoR bernilai lebih dari 50%</string>
    <string name="proporsi_input_tidak_sesuai">Proporsi data input tidak sesuai</string>
    <string name="ror_bernilai">RoR bernilai</string>
    <string name="negatif">negatif</string>
    <string name="estimated">(estimated)</string>
    <string name="reksadana_capslock">REKSA DANA</string>
    <string name="obligasi_capslock">OBLIGASI</string>
    <string name="asuransi_capslock">ASURANSI</string>
    <string name="reksadana">Reksa Dana</string>
    <string name="obligasi">Obligasi</string>
    <string name="asuransi">Asuransi</string>
    <string name="tahun">tahun</string>
    <string name="bulan">bulan</string>
    <string name="pin_code">Kode Pin</string>
    <string name="input_pin">Masukkan 6 digit PIN kamu</string>
    <string name="forum">Forum</string>
    <string name="news">News</string>
    <string name="promo">Promo</string>
    <string name="share_to_forum">Share to Forum</string>
    <string name="detail_promo">Detail Promo</string>
    <string name="detail_product">Detail Produk</string>
    <string name="detail_news">Detail Berita</string>
    <string name="share_news">Share News</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="kustodian_bank">Bank Kustodian</string>
    <string name="reksa_dana_type">Jenis Reksa Dana</string>
    <string name="release_date">Tanggal Peluncuran</string>
    <string name="first_purchasing_minimum">Minimum Pembelian Pertama</string>
    <string name="next_purchasing_minimum">Minimum Pembelian Selanjutnya</string>
    <string name="selling_minimum">Minimum Penjualan Kembali</string>
    <string name="minimum_saldo_unit">Minimum Saldo Unit</string>
    <string name="purchasing_cost">Biaya Pembelian</string>
    <string name="selling_cost">Biaya Penjualan Kembali</string>
    <string name="cost_invest_management">Biaya Manajer Investasi</string>
    <string name="kustodian_cost">Biaya Bank Kustodian</string>
    <string name="agent_cost">Biaya Agen Penjual</string>
    <string name="kalkulator_perencanaan">Kalkulator Perencanaan</string>
    <string name="connection">Connections</string>
    <string name="inbox">Inbox</string>
    <string name="disclaimer_post">Segala informasi yang saya share di luar tanggung jawab BCA sebagai penyedia aplikasi Welma</string>
    <string name="pelajari_lebih_lanjut">Pelajari lebih lanjut</string>
    <string name="ayo_ikuti_kuis">Ayo ikut kuis!</string>
    <string name="ulangi_kuis">Ulangi kuis!</string>
    <string name="learning">LEARNING</string>
    <string name="share_to">Shares to</string>
    <string name="add_image">add image</string>
    <string name="permission_failed">Gagal menjalankan fitur! Dibutuhkan Permission</string>
    <string name="score_label">Score:</string>
    <string name="score_max_quiz">/5</string>
    <string name="tanggal_ambil_kuis">Tanggal ambil kuis:</string>
    <string name="klik_disini">Klik Disini</string>
    <string name="kuis_interaktif">Kuis Interaktif</string>
    <string name="kuis_belum_ambil_reksadana">Mari ikuti kuis untuk mengasah pemahaman Anda mengenai Reksa Dana</string>
    <string name="kuis_sudah_ambil_reksadana">Asah kembali pengetahuanmu mengenai Reksa Dana dengan menjawab ulang pertanyaan kuis</string>
    <string name="kuis_belum_ambil_obligasi">Mari ikuti kuis untuk mengasah pemahaman Anda mengenai Obligasi</string>
    <string name="kuis_sudah_ambil_obligasi">Asah kembali pengetahuanmu mengenai Obligasi dengan menjawab ulang pertanyaan kuis</string>
    <string name="kuis_belum_ambil_asuransi">Mari ikuti kuis untuk mengasah pemahaman Anda mengenai Asuransi</string>
    <string name="kuis_sudah_ambil_asuransi">Asah kembali pengetahuanmu mengenai Asuransi dengan menjawab ulang pertanyaan kuis</string>
    <string name="kuis_capslock">KUIS</string>
    <string name="lihat_penjelasan">Lihat Penjelasan</string>
    <string name="soal_berikutnya">Soal Berikutnya</string>
</resources>