<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.basenavigation.products.detail.reksadana.calculatorfragment.BesarHasilInvestasiCalProdFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calculator_besar_hasil_investasi_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calculator_modal_awal_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3_calprod" />

    <EditText
        android:id="@+id/et_bhi_modal_awal_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6_calprod" />

    <TextView
        android:id="@+id/textView8_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calculator_investasi_bulanan_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bhi_modal_awal_calprod" />

    <EditText
        android:id="@+id/et_bhi_investasi_bulanan_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8_calprod" />

    <TextView
        android:id="@+id/textView9_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calculator_rate_of_return_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bhi_investasi_bulanan_calprod" />

    <TextView
        android:id="@+id/textView11_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ket_pertahun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9_calprod" />

    <EditText
        android:id="@+id/et_bhi_ror_calprod"
        android:layout_width="@dimen/size_for_120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11_calprod" />

    <TextView
        android:id="@+id/textView12_calprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/symbol_persen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_bhi_ror_calprod"
        app:layout_constraintStart_toEndOf="@+id/et_bhi_ror_calprod" />

    <TextView
        android:id="@+id/textView13_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calculator_durasi_investasi_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bhi_ror_calprod" />

    <Spinner
        android:id="@+id/bhi_durasi_tahun_calprod"
        android:layout_width="@dimen/size_for_100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13_calprod" />

    <TextView
        android:id="@+id/textView14_calprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tahun"
        app:layout_constraintStart_toEndOf="@+id/bhi_durasi_tahun_calprod"
        app:layout_constraintTop_toTopOf="@+id/bhi_durasi_tahun_calprod" />

    <Spinner
        android:id="@+id/bhi_durasi_bulan_calprod"
        android:layout_width="@dimen/size_for_100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView14_calprod"
        app:layout_constraintTop_toBottomOf="@+id/textView13_calprod" />

    <TextView
        android:id="@+id/textView15_calprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/bulan"
        app:layout_constraintStart_toEndOf="@+id/bhi_durasi_bulan_calprod"
        app:layout_constraintTop_toTopOf="@+id/bhi_durasi_bulan_calprod" />

    <TextView
        android:id="@+id/label_besar_hasil_investasi_calprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/calculator_besar_hasil_investasi_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14_calprod" />

    <TextView
        android:id="@+id/label_bhi_rp_calprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/rp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_besar_hasil_investasi_calprod" />

    <TextView
        android:id="@+id/tv_bhi_hasil_calprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="Hasil Perhitungan"
        app:layout_constraintStart_toEndOf="@+id/label_bhi_rp_calprod"
        app:layout_constraintTop_toBottomOf="@+id/label_besar_hasil_investasi_calprod" />

    <Button
        android:id="@+id/btn_bhi_kalkulasi_calprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/calculator_kalkulasi_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>